--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,8 @@ body,
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 a {
